--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
       box-sizing: border-box;
         margin: 0;
         padding: 0;
+        font-family: arial;
         /* -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
@@ -13,6 +14,20 @@
 
 button{ 
   cursor: pointer;
+}
+
+h1{
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+p{
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
 }
 
 /* :root {
