--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -2,8 +2,11 @@
 
 .container {
     max-width: 800px;
-    margin: 0 auto;
-    padding: 0 1rem;
+    margin: auto;
+    padding: 1rem;
+    background-color: white;
+    position: relative;
+    top: 4rem;
 }
 
 .title {
