--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -20,17 +20,10 @@
 }
 
 .menuButton {
-    border: none;
-    background-color: white;
+    composes: globalButton from '../styles/buttons.css';
     display: block;
-    height: auto;
-    width: 10.4rem;
-    padding: 7.8px 10.4px;
     text-align: left;
-    color: black;
-    line-height: 1;
 }
-
 
 .menuLink {
     background-color: white;
@@ -95,12 +88,6 @@
     }
 }
 
-@media (max-width: 768px) {
-    .submenu {
-        min-width: 8rem;
-    }
-}
-
 /* // touch screen only */
 @media (pointer: coarse) {
     .menuButton:hover {
@@ -113,15 +100,6 @@
     .menuButton:hover {
         background-color: blue;
         color: white;
-    }
-}
-/* Add this at the bottom of Menu.module.css */
-@media (max-width: 768px) {
-
-    .menuButton,
-    .menuLink {
-        padding: 5px 8px;
-        width: 8rem;
     }
 }
 
