--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,7 +1,8 @@
 /* styles/About.module.css */
 
 .container {
-    max-width: 800px;
+    max-width: 80%;
+    width: 800px;
     margin: auto;
     padding: 1rem;
     background-color: white;
@@ -25,11 +26,13 @@
 }
 
 @media (max-width: 768px) {
-    .title {
+    .container {
+    }
+    /* .title {
         font-size: 1rem;
     }
 
     .paragraph {
         font-size: 0.8rem;
-    }
+    } */
 }
